# selenium-tools

./: .gitignore  pyproject.toml
selenium_tools/: __init__.py
selenium_tools/page_objects/: __init__.py  page_objects.py
selenium_tools/selenium_driver/: __init__.py  webdriver.py
selenium_tools/selenium_plus/: __init__.py  plus.py
selenium_tools/testes/: test_webdriver.py
testes/: test_page.py  test_webdriver.py
