[tool.poetry]
name = "selenium_tools"
version = "0.1.2"
description = "Facilitando a vida dos desenvolvedores da digitalpath."
authors = ["Rodrigoneal <rodrigho2006@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.1.0"
webdriver-manager = "^3.5.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
mypy = "^0.931"
pytest-sugar = "^0.9.4"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
