[tool.poetry]
name = "selenium_tools"
version = "0.2.1"
description = "Facilitando a vida dos desenvolvedores da digitalpath."
authors = ["Rodrigoneal <rodrigho2006@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.1.0"
webdriver-manager = "^3.5.2"
captcha-breaker = {git = "https://github.com/digital-path/captcha_breaker_v2"}
selenium-recaptcha-solver = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
mypy = "^0.931"
pytest-sugar = "^0.9.4"
autopep8 = "^1.6.0"

[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
