[tool.poetry]
name = "selenium_tools"
version = "0.3.0"
description = "Algumas coisas que eu mais uso no selenium para facilitar a criação do page object."
authors = ["Rodrigoneal <rodrigho2006@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.1.0"
webdriver-manager = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
mypy = "^0.931"
pytest-sugar = "^0.9.4"
autopep8 = "^1.6.0"

[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
